--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               </div>              
               <h4>Stage 3</h4>
               <p>
-                If the obstacles enter the “protected area”, an instruction is shown in text as well as sound (pyttsx3)
+                If the obstacles enter the “protected area” and at a certain distance (by measuring objects' sizes), an instruction is shown in text as well as sound (pyttsx3)
               </p>
             </div>
           </div>
